--- a/server/index.html
+++ b/server/index.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="col-xs-6 form-group">
                                 <label>Directory</label>
-                                <input class="form-control" type="text" name="directory" id="directory">
+                                <input class="form-control" type="text" name="directory" id="directory" placeholder="download/">
                             </div>
                             <div class="col-xs-6 form-group">
                                 <label>Download to single folder</label>
